<resources>
    <string name="app_name" translatable="false">IncidencesApp</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="create_incidence">Create incidence</string>
    <string name="issue_resolved">Issue resolved</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="empty">Empty</string>
    <string name="name_of_incidence">Name of incidence</string>
    <string name="phone">Phone</string>
    <string name="write_incidence">Write incidence</string>
    <string name="date">Date</string>
    <string name="site">Site</string>
    <string name="add_option">Add option</string>
    <string name="showing">Showing </string>
    <string name="results">results</string>
    <string name="incidence">Incidence</string>
    <string name="severity">Severity: low</string>
    <string name="contact">Contact:</string>
    <string name="developer_name">Miguel Ángel Luque Triana</string>
    <string name="email">amluque@iesfranciscodelosrios.es</string>
    <string name="developed_by">Developed by:</string>
    <string name="dialog_delete_form">¿Esta seguro que desea eliminar el formulario?</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>
    <string name="about_me">About me</string>
    <string name="form">Form</string>
    <string name="severe">Severe</string>
    <string name="moderate">Moderate</string>
    <string name="low">Low</string>
    <string name="add">Add</string>
    <string name="show_dialog_add_options">Add option</string>
    <string name="text_cant_be_empty">Text can\'t be empty</string>
    <string name="name_only_letter_numbers">Name, can only contain letters and/or numbers</string>
    <string name="name_cant_empty">Name, can\'t be empty</string>
    <string name="site_cant_empty">Site can\'t be empty</string>
    <string name="site_only_letter_numbers">Site can only contains letters and/or numbers</string>
    <string name="date_cant_empty">Date can\'t be empty</string>
    <string name="date_error_formated">Bad date form. Format:(dd/mm/yyyy)</string>
    <string name="description_cant_empty">Description can\'t be empty</string>
    <string name="phone_cant_empty">Phone can\'t be empty</string>
    <string name="phone_only_numbers">Phone must only contain numbers</string>
    <string name="phone_too_long">Phone must only contain 9 digits</string>
    <string name="list_incidences">List of Incidences</string>
    <string name="cant_remove">"Can't remove "</string>
    <string name="remove_succesfully">Succesfully removed</string>
    <string name="error_permission_gallery">Error, no gallery permissions</string>
    <string name="choose_image">Choose image</string>
    <string name="image_not_selected">Image not selected</string>
    <string name="error_saving">Error saving form</string>
    <string name="save_successfully">Successfully saved form</string>
    <string name="no_search_criteria">"No search criteria "</string>
    <string name="empty_form_fields">Empty form fields</string>
    <string name="severity_cant_empty">Severity can\'t be empty</string>
    <string name="no_connection">There is no internet connection</string>
</resources>